<resources>
    <string name="app_name">HD Wallpapers</string>

    <string name="appname">Wallpapers \n HAVEN</string>
    <!--    //login-->
    <string name="login_text">Welcome Back</string>
    <string name="email_label">Email</string>
    <string name="email_hint">Forexample@gmail.com</string>
    <string name="password_label">Password</string>
    <string name="password_hint">Password</string>
    <string name="login_button_text">Login</string>
    <string name="signup_prompt">New here? Create an account.</string>
    <string name="ShowPassword">Show Password</string>

    <!--    //signup-->
    <string name="sign_up">Welcome to Wallpaper Haven!</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_account">Already have an account? Log in instead.</string>
    <string name="hint_name">John Dean</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="signupbutton">Sign Up</string>
    <string name="Slogan">Join now to start customizing your home screen!</string>

    <string name="BatteryStatus">Battery Health</string>


    <string name="Username">Wallpaper Haven</string>

    <string name="navigation_drawer_open">Open Drawer</string>
    <string name="navigation_drawer_close">Close Drawer</string>

    <string name="logout">Logout</string>

    <string name="please_wait_dialog_default_title">Please wait</string>
    <string name="please_wait_dialog_default_message">Loading…</string>

    <string name="download">Downloaded Wallpapers</string>
    <string name="noimage">No image found.</string>


    <string name="home">Home</string>
    <string name="lock">Lock</string>
    <string name="both">Both</string>
    <string name="setaswallpaper">Set as Wallpaper</string>
    <string name="downloads">Download</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>