<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cardCornerRadius="10dp"
        app:cardElevation="20dp">

        <!-- Vertical LinearLayout to arrange TextViews -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="36dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setaswallpaper"
                android:layout_margin="10dp"
                android:textColor="@color/black"
                android:fontFamily="@font/productsansbold"
                android:textSize="22sp"
                android:layout_marginBottom="8dp"/>

            <!-- TextView for Home -->
            <TextView
                android:id="@+id/Home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:drawableLeft="@drawable/baseline_home_24"
                android:drawablePadding="15dp"
                android:layout_margin="10dp"
                android:textColor="@color/black"
                android:fontFamily="@font/productsansregular"
                android:textSize="20sp"
                android:layout_marginBottom="8dp"/>

            <!-- TextView for Lock -->
            <TextView
                android:id="@+id/Lock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lock"
                android:layout_margin="10dp"
                android:drawableLeft="@drawable/baseline_lock_24"
                android:drawablePadding="15dp"
                android:textColor="@color/black"
                android:fontFamily="@font/productsansregular"
                android:textSize="20sp"
                android:layout_marginBottom="8dp"/>

            <!-- TextView for Both -->
            <TextView
                android:id="@+id/Both"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/both"
                android:layout_margin="10dp"
                android:drawableLeft="@drawable/baseline_add_to_home_screen_24"
                android:drawablePadding="15dp"
                android:textColor="@color/black"
                android:fontFamily="@font/productsansregular"
                android:textSize="20sp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
