<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/logoBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <ImageView
                android:id="@+id/logo"
                android:layout_width="160dp"
                android:layout_height="200dp"
                android:layout_marginTop="80dp"
                android:src="@drawable/logo"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/SignupText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/logo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:fontFamily="@font/logofont"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/SignUpSlogan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Slogan"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/SignupText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:fontFamily="@font/productsansitalic"
                android:textSize="12sp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <!--        Email Area-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/emailbox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/logoBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <EditText
                android:id="@+id/UserEmailSignup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="15dp"
                android:drawablePadding="5dp"
                android:drawableLeft="@drawable/baseline_email_24"
                android:layout_marginTop="10dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:inputType="textEmailAddress"
                android:hint="@string/email_hint"
                android:background="@drawable/custom_edit_text_rounded"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--        Password area Area-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/passwordbox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/emailbox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <EditText
                android:id="@+id/UserPasswordSignup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="15dp"
                android:drawablePadding="5dp"
                android:drawableLeft="@drawable/baseline_lock_24"
                android:layout_marginTop="10dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:inputType="textPassword"
                android:hint="@string/password_hint"
                android:background="@drawable/custom_edit_text_rounded"/>


        </androidx.constraintlayout.widget.ConstraintLayout>


        <!--        Password area Area-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cpasswordbox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/passwordbox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <EditText
                android:id="@+id/confirmpassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="15dp"
                android:layout_marginTop="10dp"
                android:drawablePadding="5dp"
                android:drawableLeft="@drawable/baseline_lock_24"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:inputType="textPassword"
                android:hint="@string/hint_confirm_password"
                android:background="@drawable/custom_edit_text_rounded"/>
            <CheckBox
                android:id="@+id/ShowPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/ShowPassword"
                android:layout_marginStart="45dp"
                app:layout_constraintTop_toBottomOf="@id/confirmpassword"
                app:layout_constraintStart_toStartOf="@id/confirmpassword"/>
        </androidx.constraintlayout.widget.ConstraintLayout>


        <!--        Button and Signup -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/buttonArea"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/cpasswordbox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <Button
                android:id="@+id/SignUpButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/signupbutton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="50dp"
                android:backgroundTint="@color/logoColor"
                />

            <TextView
                android:id="@+id/toLoginPage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/SignUpButton"
                app:layout_constraintEnd_toEndOf="@+id/SignUpButton"
                android:textAlignment="center"
                app:layout_constraintStart_toStartOf="@+id/SignUpButton"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/productsansitalic"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:text="@string/already_have_account"
                android:textSize="12sp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:elevation="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
